Worked on correcting alignment of guest dropdown

--- a/themes/efora-child/style.css
+++ b/themes/efora-child/style.css
@@ -5413,5 +5413,18 @@ border-radius: 10px;
     position:relative;
 }
 
+.listings_wrapper_box .noresult .alert.alert-danger {
+    font-weight: 500;
+    font-size: 14px;
+    background: transparent;
+    border: 0;
+    padding: 0;
+    color: red;
+}
+
+.z-index{
+    z-index:1 !important;
+}
+
 
 
